load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/fission-workflow-bundle/bundle:go_default_library",
        "//vendor/github.com/nats-io/go-nats:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/urfave/cli:go_default_library",
    ],
)

go_binary(
    name = "fission-workflow-bundle",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
