load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fission-workflow.go"],
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/urfave/cli:go_default_library"],
)

go_binary(
    name = "fission-workflow",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
