load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apiserver:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes/empty:go_default_library",
        "//vendor/github.com/urfave/cli:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)

go_binary(
    name = "wfcli",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
