load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/wfcli/swagger-client/client/admin_api:go_default_library",
        "//cmd/wfcli/swagger-client/client/workflow_api:go_default_library",
        "//cmd/wfcli/swagger-client/client/workflow_invocation_api:go_default_library",
        "//cmd/wfcli/swagger-client/models:go_default_library",
        "//pkg/api/workflow/parse/yaml:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/version:go_default_library",
        "//vendor/github.com/go-openapi/runtime/client:go_default_library",
        "//vendor/github.com/go-openapi/strfmt:go_default_library",
        "//vendor/github.com/golang/protobuf/jsonpb:go_default_library",
        "//vendor/github.com/urfave/cli:go_default_library",
    ],
)

go_binary(
    name = "wfcli",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
