load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api/workflow/parse/yaml:go_default_library",
        "//vendor/github.com/gogo/protobuf/jsonpb:go_default_library",
    ],
)

go_binary(
    name = "wfparser",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
