load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "function.go",
        "invocation.go",
        "workflow.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cache:go_default_library",
        "//pkg/eventstore:go_default_library",
        "//pkg/eventstore/eventids:go_default_library",
        "//pkg/eventstore/events:go_default_library",
        "//pkg/projector/project:go_default_library",
        "//pkg/projector/project/invocation:go_default_library",
        "//pkg/projector/project/workflow:go_default_library",
        "//pkg/types:go_default_library",
        "//vendor/github.com/fission/fission:go_default_library",
        "//vendor/github.com/fission/fission/poolmgr/client:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

filegroup(
    name = "go_default_library_protos",
    srcs = ["api.proto"],
    visibility = ["//visibility:public"],
)
