load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["function.go"],
    visibility = ["//visibility:public"],
    deps = ["//pkg/types:go_default_library"],
)

filegroup(
    name = "go_default_library_protos",
    srcs = ["api.proto"],
    visibility = ["//visibility:public"],
)
