load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aggregators.go",
        "caches.go",
        "fes.pb.go",
        "projectors.go",
        "proto.go",
        "types.go",
        "util.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/labels:go_default_library",
        "//pkg/util/pubsub:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes/timestamp:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["aggregators_test.go"],
    library = ":go_default_library",
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)

filegroup(
    name = "go_default_library_protos",
    srcs = ["fes.proto"],
    visibility = ["//visibility:public"],
)
