load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["projection.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/eventstore:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/types/events:go_default_library",
        "//pkg/util/pubsub:go_default_library",
    ],
)
