load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/satori/go.uuid:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
