load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["bootstrap.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/function:go_default_library",
        "//pkg/api/invocation:go_default_library",
        "//pkg/api/workflow:go_default_library",
        "//pkg/apiserver:go_default_library",
        "//pkg/cache:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/eventstore/nats:go_default_library",
        "//pkg/fission:go_default_library",
        "//pkg/projector/project/invocation:go_default_library",
        "//pkg/scheduler:go_default_library",
        "//vendor/github.com/fission/fission/controller/client:go_default_library",
        "//vendor/github.com/fission/fission/poolmgr/client:go_default_library",
        "//vendor/github.com/gorilla/handlers:go_default_library",
        "//vendor/github.com/grpc-ecosystem/grpc-gateway/runtime:go_default_library",
        "//vendor/github.com/nats-io/go-nats-streaming:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
