load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["api.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/fes:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/types/aggregates:go_default_library",
        "//pkg/types/events:go_default_library",
        "//vendor/github.com/golang/protobuf/proto:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes:go_default_library",
        "//vendor/github.com/satori/go.uuid:go_default_library",
    ],
)
