load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["api.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/workflow/parse:go_default_library",
        "//pkg/eventstore:go_default_library",
        "//pkg/eventstore/eventids:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/types/events:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/golang/protobuf/ptypes:go_default_library",
    ],
)
