load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "proxy.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apiserver:go_default_library",
        "//pkg/types:go_default_library",
        "//vendor/github.com/fission/fission:go_default_library",
        "//vendor/github.com/fission/fission/controller/client:go_default_library",
        "//vendor/github.com/fission/fission/poolmgr/client:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
