load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "invocation.go",
        "task.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api/function:go_default_library",
        "//pkg/api/invocation:go_default_library",
        "//pkg/controller/query:go_default_library",
        "//pkg/scheduler:go_default_library",
        "//pkg/types:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
