load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "expr.go",
        "scope.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/types:go_default_library",
        "//pkg/types/typedvalues:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/robertkrimen/otto:go_default_library",
    ],
)
