load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "envproxy.go",
        "httputil.go",
        "resolver.go",
        "runtime.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apiserver:go_default_library",
        "//pkg/fnenv/fission/router:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/types/typedvalues:go_default_library",
        "//vendor/github.com/fission/fission:go_default_library",
        "//vendor/github.com/fission/fission/controller/client:go_default_library",
        "//vendor/github.com/fission/fission/poolmgr/client:go_default_library",
        "//vendor/github.com/gogo/protobuf/jsonpb:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/k8s.io/client-go/1.5/pkg/api:go_default_library",
        "//vendor/k8s.io/client-go/1.5/pkg/types:go_default_library",
    ],
)
