load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "function.go",
        "invocation.go",
        "workflow.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/fes:go_default_library",
        "//pkg/types:go_default_library",
        "//pkg/types/events:go_default_library",
        "//pkg/types/typedvalues:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/gogo/protobuf/proto:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
