load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["parserformatter.go"],
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/fission/fission:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["parserformatter_test.go"],
    library = ":go_default_library",
    deps = [
        "//vendor/github.com/fission/fission:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
