load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["pubsub.go"],
    visibility = ["//visibility:public"],
    deps = ["//pkg/util/labels:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["pubsub_test.go"],
    library = ":go_default_library",
    deps = [
        "//pkg/util/labels:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
